fix scrollbars

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -106,7 +106,7 @@ pre
   margin 10px 0
   padding 2px 8px
   text-align left
-  overflow scroll
+  overflow auto
   border-radius 3px
   @media screen and (max-width: mobile-width)
     padding 10px
